--- a/package.json
+++ b/package.json
@@ -1,18 +1,25 @@
 {
-    "name": "boganipsum"
-  , "version": "0.1.0"
-  , "description": "Lorem Ipsum ... Bogan Style!"
-  , "main": "index.js"
-  , "bin": {
-        "boganipsum" : "./boganipsum"
-    }
-  , "keywords": [ "lorem", "ipsum", "loremipsum", "example", "text", "filler" ]
-  , "repository": {
-        "type": "git"
-      , "url": "git://github.com/rvagg/node-boganipsum.git"
-    }
-  , "authors": [
+    "name": "boganipsum",
+    "version": "0.2.0",
+    "description": "Lorem Ipsum ... Bogan Style!",
+    "main": "index.js",
+    "bin": {
+        "boganipsum": "./boganipsum"
+    },
+    "keywords": [
+        "lorem",
+        "ipsum",
+        "loremipsum",
+        "example",
+        "text",
+        "filler"
+    ],
+    "repository": {
+        "type": "git",
+        "url": "git://github.com/rvagg/node-boganipsum.git"
+    },
+    "authors": [
         "Rod Vagg @rvagg <rod@vagg.org> (https://github.com/rvagg)"
-    ]
-  , "license": "MIT"
+    ],
+    "license": "MIT"
 }
